#145: fixes for the integration documentation (#148)